# Technical_Assignment_Contract_Intelligence_Parser

./: README.md
backend/: .env.example  .gitignore  Dockerfile  Procfile  README.md  create_samples.py  docker-compose.yml  pyproject.toml  pytest.ini  run_dev.py  scripts.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  routers.py
backend/src/core/: __init__.py  config.py  exceptions.py  utils.py
backend/src/database/: models.py
backend/src/services/: extractor.py
backend/src/tasks/: __init__.py  celery.py
backend/tests/: conftest.py  test_api.py  test_celery.py  test_extractor.py  test_integration.py  test_utils.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/public/: robots.txt
frontend/src/: App.tsx  index.css
frontend/src/components/: Navigation.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/pages/: ContractDetails.tsx  ContractDetails_new.tsx  Dashboard.tsx  NotFound.tsx  Upload.tsx
frontend/src/services/: api.ts  queries.ts  types.ts
